Begin writing the second chapter

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -157,3 +157,18 @@
   year={2019},
   howpublished={\url{https://afl-1.readthedocs.io/en/latest/about_afl.html}}
 }
+
+@mics{apiFuzz2020github,
+  title={{apiFuzz}},
+  year={2020},
+  howpublished={\url{https://github.com/viralpoetry/api-fuzz}}
+}
+
+@inproceedings{atlidakis2019restler,
+  title={Restler: Stateful rest api fuzzing},
+  author={Atlidakis, Vaggelis and Godefroid, Patrice and Polishchuk, Marina},
+  booktitle={2019 IEEE/ACM 41st International Conference on Software Engineering (ICSE)},
+  pages={748--758},
+  year={2019},
+  organization={IEEE}
+}
