--- a/introduction-to-fuzzing.tex
+++ b/introduction-to-fuzzing.tex
@@ -7,7 +7,7 @@ Unit testing consists of running automated test units where each unit tests a sp
 Integration testing, on the other hand, does not run small units. It combines all units of the application and tests their integration together. One possible disadvantage of integration testing is that mainly the expected path is tested. Moreover, random inputs are provided rather seldomly.
 
 
-\section{Why is fuzzing}
+\section{Why fuzzing}
 The above-mentioned testing methods, however, proved insufficient when Miller with his team were able to crash from 24\% to 33\% of nearly 90 Unix battle-tested utilities. They were generating random inputs and reporting the error if the program crashed or hanged. Miller described the fuzz testing strategy as a random walk through state space of a program, represented by a state machine, searching for undefined states \cite{miller1990empirical}.
 
 One of the most frequent bugs caught by fuzzers are buffer overflows, memory leaks and formatting errors. This sort of bugs may seem innocent and one might think that they will only crash the application. On the contrary, these bugs may leed to severe vulnerabilities such as heartbleed bug \cite{heartbleed2020bug} in widely used TLS implementation, which caused primary keys to leak and thus exposed the entire communication unencrypted. There is an example implementation of how to find the heartbleed vulnerability right in the ClusterFuzz documentation \cite{clusterfuzz2020heartbleed}.
