Move chapters to separate files

--- a/architecture-of-out-fuzzer.tex
+++ b/architecture-of-out-fuzzer.tex
@@ -3,4 +3,7 @@ In this chapter we will discuss the architecture of our fuzzer.
 
 \section{Why use OpenAPI}
 \subsection{What OpenAPI provides}
+
 \section{On multiprocessing and speed}
+
+\section{Replaying the results}
