--- a/main.tex
+++ b/main.tex
@@ -174,21 +174,13 @@ There will be an abstract in English.
 
 \mainmatter
 
-\chapter{Introduction}
-Here will be an Introduction to my thesis.
-
+\input introduction.tex
 \input introduction-to-fuzzing.tex
 \input analysis-of-exiting-work.tex
 \input architecture-of-out-fuzzer.tex
-
-\chapter{Implementation}
-In this chapter we discuss the implementation of the fuzzer.
-
-\chapter{Our findings}
-Here we will write about what we were able to achieve with our fuzzer and describe different bugs found by our fuzzer.
-
-\chapter{Conclusion}
-Here will be a conclusion of my thesis.
+\input implementation.tex
+\input our-findings.tex
+\input conclusion.tex
 
 % -------------------
 % --- Bibliografia
