--- a/our-findings.tex
+++ b/our-findings.tex
@@ -1,2 +1,7 @@
 \chapter{Our findings}
 Here we will write about what we were able to achieve with our fuzzer and describe different bugs found by our fuzzer.
+
+\section{Authorization to increase coverage}
+% - able to specify with cli args
+% - more findings when auth token is provided (gitea/vault)
+% - without token only auth is fuzzed since payload is usually not even parsed
