--- a/architecture-of-out-fuzzer.tex
+++ b/architecture-of-out-fuzzer.tex
@@ -1,8 +1,10 @@
 \chapter{Architecture of our fuzzer}
 In this chapter we will discuss the architecture of our fuzzer.
 
+\subsection{Why is a black-box fuzzing good fit for web services}
+In the case of performing offensive security, we might not have access to the source code of the target to perform some analysis. We will only be able to access some interface of the target. This is even more true when it comes to web services.
+
 \section{Why use OpenAPI}
-\subsection{What OpenAPI provides}
 
 \section{On multiprocessing and speed}
 
