--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,2 +1,6 @@
 \chapter{Conclusion}
 Here will be a conclusion of my thesis.
+\section{Future work}
+\subsection{Checking authorization}
+\subsection{Randomizin HTTP methods}
+GitLab was hacked this way (https://blog.teddykatz.com/2019/11/05/github-oauth-bypass.html)
