--- a/implementation.tex
+++ b/implementation.tex
@@ -1,2 +1,4 @@
 \chapter{Implementation}
 In this chapter we discuss the implementation of the fuzzer.
+% - crossterm to run in all terminals (not just unix ones)
+% - all above mentioned fuzzers were implemented in dynamic language - Python
