--- a/bibliography.bib
+++ b/bibliography.bib
@@ -172,3 +172,9 @@
   year={2019},
   organization={IEEE}
 }
+
+@mics{tntFuzzer2020github,
+  title={{TnT-Fuzzer}},
+  year={2020},
+  howpublished={\url{https://github.com/Teebytes/TnT-Fuzzer}}
+}
