--- a/bibliography.bib
+++ b/bibliography.bib
@@ -178,3 +178,21 @@
   year={2020},
   howpublished={\url{https://github.com/Teebytes/TnT-Fuzzer}}
 }
+
+@mics{pyjfuzz2020github,
+  title={{PyJFuzz}},
+  year={2020},
+  howpublished={\url{https://github.com/mseclab/PyJFuzz}}
+}
+
+@mics{gitea2020web,
+  title={{Gitea}},
+  year={2020},
+  howpublished={\url{https://gitea.com/}}
+}
+
+@mics{vault2020github,
+  title={{Vault}},
+  year={2020},
+  howpublished={\url{https://github.com/hashicorp/vault}}
+}
