Add REST & RESTfull services section

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -196,3 +196,12 @@
   year={2020},
   howpublished={\url{https://github.com/hashicorp/vault}}
 }
+
+@article{rodriguez2008restful,
+  title={Restful web services: The basics},
+  author={Rodriguez, Alex},
+  journal={IBM developerWorks},
+  volume={33},
+  pages={18},
+  year={2008}
+}
