--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,9 @@
 \usepackage{graphicx}
 \usepackage{url}
 \usepackage[hidelinks,breaklinks]{hyperref}
+\usepackage[outputdir=build]{minted}
+\usepackage{subfigure}
+\usemintedstyle{friendly}
 \linespread{1.25} % hodnota 1.25 by mala zodpovedat 1.5 riadkovaniu
 
 % -------------------
