Place figures and tables "here"

--- a/analysis-of-exiting-work.tex
+++ b/analysis-of-exiting-work.tex
@@ -35,7 +35,8 @@ In addition to the \textit{Blog Post Service}, Microsoft Research team fuzzed wi
 
 As for the error reporting, RESTler works similar to the apiFuzz. It logs a bug if a \texttt{500 HTTP} status code - \texttt{Internal Server Error} is received. Nonetheless, RESTler is able to repla the results. i.e. when bug is found, RESTler will recurse backwards and log the whole request sequence that lead to the bug.
 
-\begin{table}
+\paragraph{}
+\begin{table}[h]
 \begin{center}
 \begin{tabular}{|c|c c c|}
 \hline
