--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,10 @@
 \usepackage[hidelinks,breaklinks]{hyperref}
 \usepackage[outputdir=build]{minted}
 \usepackage{subfigure}
+\usepackage{graphicx}
 \usemintedstyle{friendly}
+\graphicspath{ {./images/} }
+
 \linespread{1.25} % hodnota 1.25 by mala zodpovedat 1.5 riadkovaniu
 
 % -------------------
